Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 <li>populate database with the provided sql data dump</li>
 <li>setup database connection in <em>server/config/secrets.ini</em>
 </li>
-<li>setup whitelist in <em>server/config/config.ini</em>
-</li>
+<li>setup whitelist in <em>server/config/config.ini</em> </li>
 </ul>
 
 <h3>
