Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 
 <ul>
 <li>populate database with the provided sql data dump</li>
-<li>setup database connection in <em>server/config/secrets.ini</em>
-</li>
-<li>setup whitelist in <em>server/config/config.ini</em> </li>
+<li>setup database connection in server/config/secrets.ini</li>
+<li>setup whitelist in server/config/config.ini</li>
 </ul>
 
 <h3>
@@ -41,8 +40,7 @@
 <ul>
 <li>register App at <a href="https://developers.eveonline.com/">https://developers.eveonline.com/</a>
 </li>
-<li>edit the clientID and secret in <em>server/config/secrets.ini</em>
-</li>
+<li>edit the clientID and secret in server/config/secrets.ini</li>
 <li>edit the callbackUrl in <em>server/config/config.ini</em> (e.g. <a href="http://www.team-veldspar.de/jsig3/">http://www.team-veldspar.de/jsig3/</a>)</li>
 <li>add the callback url to your App at <a href="https://developers.eveonline.com/">https://developers.eveonline.com/</a> (e.g. <a href="http://www.team-veldspar.de/jsig3/callback.php">http://www.team-veldspar.de/jsig3/callback.php</a>)</li>
 </ul>
